Color nos textos

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 memória.O Enigma do Melhor Funcionário é um quebra-cabeça envolvente e intricado , projetado para
                 desafiar até os mais perspicazes. Só 5% das pessoas no mundo conseguem resolver ele.</p>
 
-            <h3 class="subtitle">Tente adivinhar a casa de cada morador , características e gostos seguindo as dicas
+            <h3 class="subtitle">Tente adivinhar a casa de cada morador ,seguindo as dicas
                 abaixo</h3>
 
             <div class="game">
